# prior-maps-exploration

./: LICENSE  README.md
blueprint_exploration/: CMakeLists.txt  package.xml
blueprint_exploration/launch/: burger_robotis_movebase.launch  giraff.launch  robocom.launch  robocom_move_base.launch  rviz.launch  turtlebot_expl.launch  turtlebot_expl_basicV2_floorplan.launch  turtlebot_expl_basic_bounding_box.launch  turtlebot_expl_basic_bounding_box_no_furniture.launch  turtlebot_expl_basic_floorplan.launch  turtlebot_expl_basic_floorplan_no_furniture.launch  turtlebot_expl_basic_footprint.launch  turtlebot_expl_basic_footprint_no_furniture.launch  turtlebot_expl_basic_no_prior.launch  turtlebot_expl_basic_no_prior_no_furniture.launch  turtlebot_expl_closed.launch  turtlebot_expl_closed_floorplan.launch  turtlebot_expl_move_base.launch  turtlebot_expl_office_bounding_box.launch  turtlebot_expl_office_bounding_box_no_furniture.launch  turtlebot_expl_office_floorplan.launch  turtlebot_expl_office_floorplan_no_furniture.launch  turtlebot_expl_office_footprint.launch  turtlebot_expl_office_footprint_no_furniture.launch  turtlebot_expl_office_no_prior.launch  turtlebot_expl_office_no_prior_no_furniture.launch  turtlebot_expl_open_bounding_box.launch  turtlebot_expl_open_bounding_box_no_furniture.launch  turtlebot_expl_open_floorplan.launch  turtlebot_expl_open_floorplan_30m.launch  turtlebot_expl_open_floorplan_no_furniture.launch  turtlebot_expl_open_footprint.launch  turtlebot_expl_open_footprint_30m.launch  turtlebot_expl_open_footprint_no_furniture.launch  turtlebot_expl_open_footprint_no_furniture_30m.launch  turtlebot_expl_open_no_prior_30m.launch  turtlebot_expl_open_no_prior_no_furniture_30m.launch  turtlebot_expl_sequential_t1.launch  turtlebot_expl_sequential_t1_floorplan.launch  turtlebot_expl_sequential_t1_map.launch  (+3 more)
blueprint_exploration/launch/includes/: gmapping.launch.xml  gmapping_basic.launch.xml  gmapping_office.launch.xml  gmapping_robocom.launch.xml
blueprint_exploration/param/burger/: blueprint_map_server.yaml  costmap.yaml  navigator.yaml  operator.yaml  ros_gmapping.yaml
blueprint_exploration/param/burger/robotis/: global_costmap_params.yaml  local_costmap_params.yaml
blueprint_exploration/param/burger/robotis_original/: global_costmap_params.yaml  move_base_params.yaml
blueprint_exploration/param/robocom/: blueprint_map_server.yaml  costmap.yaml  navigator.yaml  operator.yaml  ros_gmapping.yaml
blueprint_exploration/param/robocom/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml
blueprint_exploration/param/turtlebot/: blueprint_map_server.yaml  blueprint_map_server_basic_bounding_box.yaml  blueprint_map_server_basic_footprint.yaml  blueprint_map_server_office_bounding_box.yaml  blueprint_map_server_office_floorplan.yaml  blueprint_map_server_office_footprint.yaml  blueprint_map_server_open_bounding_box.yaml  blueprint_map_server_open_floorplan.yaml  blueprint_map_server_open_footprint.yaml  blueprint_map_server_sequential_t1_map.yaml  blueprint_map_server_sequential_t2_map.yaml  costmap.yaml  navigator.yaml  navigator_basic.yaml  navigator_basic_no_prior.yaml  navigator_office.yaml  navigator_office_no_prior.yaml  ros.yaml  ros_gmapping.yaml
blueprint_exploration/param/turtlebot/move_base/: costmap_common_params.yaml  local_costmap_params.yaml  navigator.yaml
blueprint_exploration/robots/kobuki/: cam.urdf.xacro  camera_properties.urdf.xacro  hokuyo.urdf.xacro  hokuyo_30m.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_hokuyo.urdf.xacro  kobuki_hexagons_hokuyo_30m.urdf.xacro  turtlebot_gazebo.urdf.xacro  turtlebot_gazebo_30m.urdf.xacro
blueprint_exploration/robots/kobuki/LASER_10M/: hokuyo.urdf.xacro  kobuki_hexagons_hokuyo.urdf.xacro  turtlebot_gazebo.urdf.xacro
blueprint_exploration/rviz/: config.rviz  config_burger_move_base.rviz  config_gmapping.rviz  config_robocom_move_base.rviz
blueprint_exploration/worlds/: basic.world  basic_no_furniture.world  basic_v2.world  basic_v3.world  closed.world  ed21.world  map2.world  map4.world  office.world  office_no_furniture.world  open.world  open_no_furniture.world
blueprint_exploration/worlds/floorplans/burger/: turtleR.xcf
blueprint_exploration/worlds/maps/: basic.pgm  basic.yaml  basic_no_furniture.pgm  basic_no_furniture.yaml  basic_v2.pgm  basic_v2.yaml  basic_v3.pgm  basic_v3.yaml  closed.pgm  closed.yaml  ed21.pgm  ed21.yaml  map2.pgm  map2.yaml  map4.pgm  map4.yaml  office.pgm  office.yaml  office_no_furniture.pgm  office_no_furniture.yaml  office_wrong.pgm  office_wrong.yaml  open.pgm  open.yaml  open_no_furniture.pgm  open_no_furniture.yaml
blueprint_exploration/worlds/maps/burger/: aislab.yaml  brooks.yaml  brooks2.yaml  turtle.yaml  turtleR.xcf  turtleR.yaml
blueprint_exploration/worlds/maps/robocom/: ed21.pgm  ed21.yaml  ed21new.pgm
blueprint_exploration/worlds/models/: bedroom2.dae  kitchen.dae  livingroom.dae  livingroom2.dae
blueprint_exploration/worlds/models/big_table/: model.config  model.dae  model.sdf
blueprint_exploration/worlds/models/car_2/: model.sdf
blueprint_exploration/worlds/models/desk2/: model.config  model.dae  model.sdf
blueprint_exploration/worlds/models/machines/meshes/: machines.dae
blueprint_exploration/worlds/models/office_desk/: model.config  model.dae  model.sdf
blueprint_exploration/worlds/models/shelf/: model.config  model.dae  model.sdf
blueprint_exploration/worlds/models/wall1/: model.sdf
blueprint_exploration/worlds/models/wall2/: model.config  model.sdf
navigation_2d-master/nav2d_exploration/: CMakeLists.txt  exploration.xml  package.xml  setup.py
navigation_2d-master/nav2d_exploration/include/nav2d_exploration/: BlueprintExploration.h
navigation_2d-master/nav2d_exploration/msg/: Log.msg
navigation_2d-master/nav2d_exploration/nodes/: logger.py
navigation_2d-master/nav2d_exploration/src/: BlueprintExploration.cpp  exploration_plugins.cpp
(+14 files in other folders)
