<?xml version="1.0"?>
<package>
  <name>blueprint_exploration</name>
  <version>1.0.0</version>
  <description>The blueprint_exploration package</description>
  <maintainer email="danilo.fusi@mail.polimi.it">Danilo Fusi</maintainer>
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/turtlebot_navigation_stack</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Turtlebot dependencies -->
  <build_depend>turtlebot_gazebo</build_depend>
  <build_depend>turtlebot_description</build_depend>
  <build_depend>turtlebot_navigation</build_depend>
  <run_depend>turtlebot_gazebo</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>turtlebot_description</run_depend>

  <!--Gazebo dependencies -->
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <!-- Nav2d dependencies -->
  <build_depend>nav2d_navigator</build_depend>
  <run_depend>nav2d_navigator</run_depend>
  <build_depend>nav2d_operator</build_depend>
  <run_depend>nav2d_operator</run_depend>


  <!-- Others -->
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>
  <build_depend>robot_state_publisher</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <build_depend>nodelet</build_depend>
  <run_depend>nodelet</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>map_server</run_depend>
  <build_depend>map_server</build_depend>
  
  
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>
